ir/tests/snapshots/grammar_json_snapshots__grammar_with_inline_rules.snap
---
source: ir/tests/grammar_json_snapshots.rs
expression: grammar_json(&grammar)
---
{
  "name": "inline_demo",
  "rules": {
    "4": [
      {
        "lhs": 4,
        "rhs": [
          {
            "NonTerminal": 5
          }
        ],
        "precedence": null,
        "associativity": null,
        "fields": [],
        "production_id": 0
      },
      {
        "lhs": 4,
        "rhs": [
          {
            "Terminal": 1
          }
        ],
        "precedence": null,
        "associativity": null,
        "fields": [],
        "production_id": 1
      }
    ],
    "5": [
      {
        "lhs": 5,
        "rhs": [
          {
            "NonTerminal": 4
          },
          {
            "Terminal": 2
          },
          {
            "NonTerminal": 4
          }
        ],
        "precedence": null,
        "associativity": null,
        "fields": [],
        "production_id": 2
      },
      {
        "lhs": 5,
        "rhs": [
          {
            "NonTerminal": 4
          },
          {
            "Terminal": 3
          },
          {
            "NonTerminal": 4
          }
        ],
        "precedence": null,
        "associativity": null,
        "fields": [],
        "production_id": 3
      }
    ]
  },
  "tokens": {
    "1": {
      "name": "NUMBER",
      "pattern": {
        "Regex": "\\d+"
      },
      "fragile": false
    },
    "2": {
      "name": "+",
      "pattern": {
        "String": "+"
      },
      "fragile": false
    },
    "3": {
      "name": "*",
      "pattern": {
        "String": "*"
      },
      "fragile": false
    }
  },
  "precedences": [],
  "conflicts": [],
  "externals": [],
  "extras": [],
  "fields": {},
  "supertypes": [],
  "inline_rules": [
    5
  ],
  "alias_sequences": {},
  "production_ids": {},
  "max_alias_sequence_length": 0,
  "rule_names": {
    "4": "expr",
    "5": "_binary_op"
  },
  "symbol_registry": null
}
