ir/tests/snapshots/grammar_json_snapshots__grammar_with_mixed_token_patterns.snap
---
source: ir/tests/grammar_json_snapshots.rs
expression: grammar_json(&grammar)
---
{
  "name": "token_patterns",
  "rules": {
    "6": [
      {
        "lhs": 6,
        "rhs": [
          {
            "Terminal": 1
          }
        ],
        "precedence": null,
        "associativity": null,
        "fields": [],
        "production_id": 0
      },
      {
        "lhs": 6,
        "rhs": [
          {
            "Terminal": 2
          }
        ],
        "precedence": null,
        "associativity": null,
        "fields": [],
        "production_id": 1
      },
      {
        "lhs": 6,
        "rhs": [
          {
            "Terminal": 3
          }
        ],
        "precedence": null,
        "associativity": null,
        "fields": [],
        "production_id": 2
      }
    ]
  },
  "tokens": {
    "1": {
      "name": "NUMBER",
      "pattern": {
        "Regex": "\\d+(\\.\\d+)?"
      },
      "fragile": false
    },
    "2": {
      "name": "IDENTIFIER",
      "pattern": {
        "Regex": "[a-zA-Z_]\\w*"
      },
      "fragile": false
    },
    "3": {
      "name": "STRING",
      "pattern": {
        "Regex": "\"([^\"\\\\]|\\\\.)*\""
      },
      "fragile": false
    },
    "4": {
      "name": "+",
      "pattern": {
        "String": "+"
      },
      "fragile": false
    },
    "5": {
      "name": ";",
      "pattern": {
        "String": ";"
      },
      "fragile": false
    }
  },
  "precedences": [],
  "conflicts": [],
  "externals": [],
  "extras": [],
  "fields": {},
  "supertypes": [],
  "inline_rules": [],
  "alias_sequences": {},
  "production_ids": {},
  "max_alias_sequence_length": 0,
  "rule_names": {
    "6": "value"
  },
  "symbol_registry": null
}
