ir/tests/snapshots/grammar_json_snapshots__grammar_with_precedence_declarations.snap
---
source: ir/tests/grammar_json_snapshots.rs
expression: grammar_json(&grammar)
---
{
  "name": "precedence_demo",
  "rules": {
    "5": [
      {
        "lhs": 5,
        "rhs": [
          {
            "NonTerminal": 5
          },
          {
            "Terminal": 2
          },
          {
            "NonTerminal": 5
          }
        ],
        "precedence": null,
        "associativity": null,
        "fields": [],
        "production_id": 0
      },
      {
        "lhs": 5,
        "rhs": [
          {
            "NonTerminal": 5
          },
          {
            "Terminal": 3
          },
          {
            "NonTerminal": 5
          }
        ],
        "precedence": null,
        "associativity": null,
        "fields": [],
        "production_id": 1
      },
      {
        "lhs": 5,
        "rhs": [
          {
            "NonTerminal": 5
          },
          {
            "Terminal": 4
          },
          {
            "NonTerminal": 5
          }
        ],
        "precedence": null,
        "associativity": null,
        "fields": [],
        "production_id": 2
      },
      {
        "lhs": 5,
        "rhs": [
          {
            "Terminal": 1
          }
        ],
        "precedence": null,
        "associativity": null,
        "fields": [],
        "production_id": 3
      }
    ]
  },
  "tokens": {
    "1": {
      "name": "NUMBER",
      "pattern": {
        "Regex": "\\d+"
      },
      "fragile": false
    },
    "2": {
      "name": "+",
      "pattern": {
        "String": "+"
      },
      "fragile": false
    },
    "3": {
      "name": "*",
      "pattern": {
        "String": "*"
      },
      "fragile": false
    },
    "4": {
      "name": "-",
      "pattern": {
        "String": "-"
      },
      "fragile": false
    }
  },
  "precedences": [
    {
      "level": 1,
      "associativity": "Left",
      "symbols": [
        2,
        4
      ]
    },
    {
      "level": 2,
      "associativity": "Left",
      "symbols": [
        3
      ]
    }
  ],
  "conflicts": [],
  "externals": [],
  "extras": [],
  "fields": {},
  "supertypes": [],
  "inline_rules": [],
  "alias_sequences": {},
  "production_ids": {},
  "max_alias_sequence_length": 0,
  "rule_names": {
    "5": "expr"
  },
  "symbol_registry": null
}
