ir/tests/snapshots/grammar_json_snapshots__minimal_grammar.snap
---
source: ir/tests/grammar_json_snapshots.rs
expression: grammar_json(&grammar)
---
{
  "name": "minimal",
  "rules": {
    "2": [
      {
        "lhs": 2,
        "rhs": [
          {
            "Terminal": 1
          }
        ],
        "precedence": null,
        "associativity": null,
        "fields": [],
        "production_id": 0
      }
    ]
  },
  "tokens": {
    "1": {
      "name": "NUMBER",
      "pattern": {
        "Regex": "\\d+"
      },
      "fragile": false
    }
  },
  "precedences": [],
  "conflicts": [],
  "externals": [],
  "extras": [],
  "fields": {},
  "supertypes": [],
  "inline_rules": [],
  "alias_sequences": {},
  "production_ids": {},
  "max_alias_sequence_length": 0,
  "rule_names": {
    "2": "value"
  },
  "symbol_registry": null
}
